# Verse

./: CMakeLists.txt  README.md
cmake/Modules/: FindPOCKETSPHINX.cmake  FindPThread.cmake  FindSPHINXBASE.cmake  FindVUZIX.cmake
modules/AR/: CMakeLists.txt  VoiceRecognition.cpp  VoiceRecognition.h
modules/Core/: DisplayObject.cpp  DisplayObject.h
modules/Devices/: CMakeLists.txt  Platform.cpp  Platform.h  Vuzix.cpp  Vuzix.h
modules/Events/: VoiceEvent.cpp  VoiceEvent.h
modules/UI/: Button.cpp  Dialog.h  DialogBalloon.h  Draw2D.h  FreeType.cpp  FreeType.h  GLBaseApp.cpp  GLBaseApp.h  Image3D.cpp  Image3D.h  List.cpp  List.h  Menu.h  MenuItem.h  MenuItemData.h  Model3D.cpp  Model3D.h  TextField.h
